--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,29 +1,30 @@
 server:
-  port: ${SPRING_LOCAL_PORT:8080}
+  port: ${SPRING_LOCAL_PORT:8080}   # In production, port is defined via env variable / container setup
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
+    url: ${SPRING_DATASOURCE_URL}      # Must be provided via env variables in production
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    show-sql: false           # Do NOT log SQL in production!
+    database-platform: org.hibernate.dialect.MySQLDialect  # Consistent dialect for MySQL
+    show-sql: false               # Never print SQL in production logs
     hibernate:
-      ddl-auto: validate      # Only validate schema; never auto-create or update in prod
+      ddl-auto: validate           # Validate schema (⚠ never allow "update" or "create" in prod)
 
   h2:
     console:
-      enabled: false
+      enabled: false               # No in-memory DB in production
 
+# Production-only admin credentials (must be provided securely via env vars)
 admin:
-  username: ${ADMIN_USERNAME}     # No defaults in production!
+  username: ${ADMIN_USERNAME}
   password: ${ADMIN_PASSWORD}
 
 logging:
   level:
-    com.example.newsplatform: INFO
-    org.springframework.security: WARN
-    org.springframework.jdbc.core: ERROR
+    com.example.newsplatform: INFO             # Only essential app logs
+    org.springframework.security: WARN         # Reduce noise in production logs
+    org.springframework.jdbc.core: ERROR       # Log only errors from JDBC layer
