--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,31 +1,33 @@
 # ========================================
 # Server configuration
 # ========================================
-server.port=${SPRING_LOCAL_PORT:8080}   # Default to 8080 if env variable not set
+server.port=${SPRING_LOCAL_PORT:8080}   # Default to 8080 if env variable is not set
 
 # ========================================
-# MariaDB Database configuration
+# MySQL Database configuration
 # ========================================
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}                       # Example: jdbc:mysql://localhost:3306/app_db?useSSL=false
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver         # ? Updated MySQL driver
 
 # ========================================
 # JPA/Hibernate properties
 # ========================================
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=update    # Change to 'none' or 'validate' in production!
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect      # ? Updated to current Hibernate 6 recommended MySQLDialect
+spring.jpa.hibernate.ddl-auto=update    # Dev only. In production use 'validate' to prevent schema changes.
+spring.jpa.show-sql=true                # Log SQL statements in dev (disable in prod)
 
 # ========================================
-# H2 Console (disable if using MariaDB)
+# H2 Console
 # ========================================
-spring.h2.console.enabled=false
+spring.h2.console.enabled=false          # Disabled since MySQL is used
 
 # ========================================
-# Spring Security default user (DEVELOPMENT ONLY)
-# Not needed if you use your own UserDetailsService bean or DB users
+# Spring Security default user
+# ========================================
+# NOTE: This is only useful for simple dev/demo setups.
+# In production use robust security configuration (DB users, custom authentication, etc.)
 # spring.security.user.name=YOUR_USERNAME
 # spring.security.user.password=YOUR_SECURE_PASSWORD
 # spring.security.user.roles=ADMIN
@@ -33,6 +35,6 @@ spring.h2.console.enabled=false
 # ========================================
 # Logging configuration
 # ========================================
-logging.level.com.example.newsplatform=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.com.example.newsplatform=DEBUG        # Verbose logs for local/dev
+logging.level.org.springframework.security=DEBUG    # Security logs visible (disable in prod)
+logging.level.org.springframework.jdbc.core=DEBUG   # Show SQL bind parameters (disable in prod)
