--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,33 +1,29 @@
 server:
-  port: ${SPRING_LOCAL_PORT:8080}   # Default to 8080 if environment variable not set
+  port: ${SPRING_LOCAL_PORT:8080}
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}  # Example: jdbc:mysql://localhost:3306/your_db?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
+    url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver   # Updated MySQL driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    show-sql: true          # Show SQL statements in log (development only)
-    database-platform: org.hibernate.dialect.MySQL8Dialect  # Use correct dialect for your MySQL version
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false           # Do NOT log SQL in production!
     hibernate:
-      ddl-auto: update      # For development, set to 'validate' or 'none' in production
+      ddl-auto: validate      # Only validate schema; never auto-create or update in prod
 
   h2:
     console:
-      enabled: false        # H2 console off (using MySQL)
+      enabled: false
 
-# Uncomment and set only if needed (DEVELOPMENT ONLY)
-#spring:
-#  security:
-#    user:
-#      name: YOUR_USERNAME
-#      password: YOUR_SECURE_PASSWORD
-#      roles: ADMIN
+admin:
+  username: ${ADMIN_USERNAME}     # No defaults in production!
+  password: ${ADMIN_PASSWORD}
 
 logging:
   level:
-    com.example.newsplatform: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.jdbc.core: DEBUG
+    com.example.newsplatform: INFO
+    org.springframework.security: WARN
+    org.springframework.jdbc.core: ERROR
