--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -2,7 +2,9 @@ name: Java CI with Gradle, Qodana Cloud and GitLeaks
 
 on:
   push:
-    branches: [ "main", "develop", "master" ]  # Trigger on pushes to these branches
+    branches: [ "main", "develop", "master" ]
+  pull_request:
+    branches: [ "main", "develop", "master" ]
 
 jobs:
   setup:
@@ -11,12 +13,12 @@ jobs:
     permissions:
       contents: read
     outputs:
-      gradle-cache-key: ${{ steps.cache.outputs.cache-key }}  # Share cache key between jobs
+      gradle-cache-key: ${{ steps.cache.outputs.cache-key }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for accurate builds
+          fetch-depth: 0
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -51,12 +53,14 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ needs.setup.outputs.gradle-cache-key }}
 
-      - name: Build with Gradle
+      - name: Build with Gradle (profile=ci)
+        env:
+          SPRING_PROFILES_ACTIVE: ci       # Force CI profile
         run: cd backend && ./gradlew build --no-daemon --warning-mode all
 
   test:
     runs-on: ubuntu-latest
-    needs: [setup, build]  # Depends on setup and build jobs
+    needs: [setup, build]
     timeout-minutes: 20
     steps:
       - name: Checkout repository
@@ -70,7 +74,9 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ needs.setup.outputs.gradle-cache-key }}
 
-      - name: Run tests with coverage
+      - name: Run tests with coverage (profile=ci)
+        env:
+          SPRING_PROFILES_ACTIVE: ci       # Run all tests in CI profile
         run: cd backend && ./gradlew test jacocoTestReport --no-daemon --warning-mode all
 
       - name: Upload test reports (Artifact)
@@ -88,7 +94,7 @@ jobs:
           if-no-files-found: warn
 
       - name: Upload coverage to CodeCov
-        uses: codecov/codecov-action@v4  # No token needed
+        uses: codecov/codecov-action@v4
         with:
           file: backend/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
@@ -104,7 +110,6 @@ jobs:
 
       - name: Run GitLeaks scan
         run: |
-          # Download and run GitLeaks (no permanent install)
           curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
           ./gitleaks detect --source . --verbose --redact
 
@@ -126,7 +131,7 @@ jobs:
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}  # Keep if Qodana requires it
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
           args: --project-dir,backend
           post-pr-comment: true
