--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,21 +1,26 @@
-server:
-  port: ${SPRING_LOCAL_PORT:8080}
+# =========================================================
+# application-dev.yml
+# Developer/CI profile configuration.
+# Uses docker-based MySQL service, ENV secrets injected from CI (.env.dev).
+# =========================================================
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:mysql://mysql-dev:3306/newsdb
+    username: devuser
+    password: ${MYSQL_DEV_PASSWORD} # Loaded from ENV
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 10
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update   # On shared dev servers we often allow "update"
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 
 logging:
   level:
-    com.example.newsplatform: DEBUG
-    org.springframework.security: INFO
-    org.springframework.jdbc.core: DEBUG
+    root: INFO
