--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,37 @@
-version: "3.8"
+# =========================================================
+# docker-compose.yml
+# Local development orchestration.
+# Loads all environment variables from .env file.
+# Runs Spring Boot (Dockerfile.dev) and MySQL db with Drupal dump mounted.
+# =========================================================
+
+version: '3.8'
 
 services:
-  db:
-    image: mysql:8.0
-    restart: always
-    env_file:
-      - .env
-    environment:
-      # Use values from .env or fallback
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    ports:
-      - "${DATABASE_LOCAL_PORT}:3306"
-    volumes:
-      - ./db_data:/var/lib/mysql
-      - ./db_dumps:/docker-entrypoint-initdb.d:ro   # Initial SQL dumps
-
   app:
-    build: .
-    depends_on:
-      - db
-    env_file:
-      - .env
-    environment:
-      # Spring Boot app should use these for database connection
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
-      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
-      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      # You can add ADMIN_USERNAME/ADMIN_PASSWORD as needed as well
-      # ADMIN_USERNAME: ${ADMIN_USERNAME}
-      # ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    container_name: news-app
     ports:
-      - "${SPRING_LOCAL_PORT}:8080"
+      - "${SPRING_LOCAL_PORT}:8080"     # Maps local port to app port
+    volumes:
+      - .:/app                          # Mounts source code to container
+    env_file:
+      - .env                            # Loads variables from .env
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql:8.0
+    container_name: news-mysql
+    ports:
+      - "${DATABASE_LOCAL_PORT}:3306"   # Expose MySQL
+    env_file:
+      - .env                            # Load MySQL vars from .env
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./db-dumps:/docker-entrypoint-initdb.d  # Load Drupal dump if exists
+
+volumes:
+  mysql_data:
