--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -7,27 +7,25 @@ on:
     branches: [ "main", "develop", "master" ]
 
 jobs:
-  setup:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-    permissions:
-      contents: read
-    outputs:
-      gradle-cache-key: ${{ steps.cache.outputs.cache-key }}
+    timeout-minutes: 15
     steps:
+      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # Setup JDK 21 (Temurin distribution)
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
+      # Cache Gradle dependencies
       - name: Cache Gradle packages
-        id: cache
         uses: actions/cache@v4
         with:
           path: |
@@ -37,48 +35,71 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-  build:
+      # Build project with Gradle using "ci" profile
+      - name: Build with Gradle (profile=ci)
+        env:
+          SPRING_PROFILES_ACTIVE: ci
+        run: cd backend && ./gradlew build --no-daemon --warning-mode all
+
+  lint:
     runs-on: ubuntu-latest
-    needs: setup
-    timeout-minutes: 15
+    needs: build
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Restore Gradle cache
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ needs.setup.outputs.gradle-cache-key }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Build with Gradle (profile=ci)
-        env:
-          SPRING_PROFILES_ACTIVE: ci       # Force CI profile
-        run: cd backend && ./gradlew build --no-daemon --warning-mode all
+      # Run static code analysis (Checkstyle / Spotless)
+      - name: Run code style checks
+        run: cd backend && ./gradlew checkstyleMain checkstyleTest spotlessCheck --no-daemon --warning-mode all
 
   test:
     runs-on: ubuntu-latest
-    needs: [setup, build]
+    needs: [build, lint]
     timeout-minutes: 20
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Restore Gradle cache
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ needs.setup.outputs.gradle-cache-key }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
+      # Run tests with coverage
       - name: Run tests with coverage (profile=ci)
         env:
-          SPRING_PROFILES_ACTIVE: ci       # Run all tests in CI profile
+          SPRING_PROFILES_ACTIVE: ci
         run: cd backend && ./gradlew test jacocoTestReport --no-daemon --warning-mode all
 
+      # Upload test reports
       - name: Upload test reports (Artifact)
         uses: actions/upload-artifact@v4
         with:
@@ -86,6 +107,7 @@ jobs:
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
+      # Upload coverage reports
       - name: Upload JaCoCo coverage (Artifact)
         uses: actions/upload-artifact@v4
         with:
@@ -93,6 +115,7 @@ jobs:
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
+      # Send coverage to Codecov
       - name: Upload coverage to CodeCov
         uses: codecov/codecov-action@v4
         with:
@@ -102,17 +125,19 @@ jobs:
 
   security:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build, lint, test]
     timeout-minutes: 10
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Run GitLeaks for secrets detection
       - name: Run GitLeaks scan
         run: |
           curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
           ./gitleaks detect --source . --verbose --redact
 
+      # Upload GitLeaks report only if failed
       - name: Upload GitLeaks results (if failed)
         if: failure()
         uses: actions/upload-artifact@v4
@@ -122,12 +147,13 @@ jobs:
 
   qodana:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build, lint, test]
     timeout-minutes: 15
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Run Qodana Cloud scan for JVM projects
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         env:
