--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle, Qodana Cloud and GitLeaks
+name: Ultra-Ultra-Fast Java CI (All-in-One)
 
 on:
   push:
@@ -7,24 +7,29 @@ on:
     branches: [ "main", "develop", "master" ]
 
 jobs:
-  build:
+  all_in_one:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     steps:
-      # Checkout the repository
+      # -------------------------------------------------------------------
+      # Step 1: Checkout repository
+      # -------------------------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Full history for Gradle & GitLeaks
 
-      # Setup JDK 21 (Temurin distribution)
+      # -------------------------------------------------------------------
+      # Step 2: Setup Java 21
+      # -------------------------------------------------------------------
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      # Cache Gradle dependencies
+      # -------------------------------------------------------------------
+      # Step 3: Cache Gradle dependencies
+      # -------------------------------------------------------------------
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -35,109 +40,57 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Build project with Gradle using "ci" profile
-      - name: Build with Gradle (profile=ci)
+      # -------------------------------------------------------------------
+      # Step 4: Run Gradle tasks (build + lint + tests + coverage)
+      # -------------------------------------------------------------------
+      - name: Gradle Build, Lint, Test, Coverage
         env:
           SPRING_PROFILES_ACTIVE: ci
-        run: cd backend && ./gradlew build --no-daemon --warning-mode all
+        run: |
+          cd backend
+          ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 10
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      # Run static code analysis (Checkstyle / Spotless)
-      - name: Run code style checks
-        run: cd backend && ./gradlew checkstyleMain checkstyleTest spotlessCheck --no-daemon --warning-mode all
-
-  test:
-    runs-on: ubuntu-latest
-    needs: [build, lint]
-    timeout-minutes: 20
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      # Run tests with coverage
-      - name: Run tests with coverage (profile=ci)
-        env:
-          SPRING_PROFILES_ACTIVE: ci
-        run: cd backend && ./gradlew test jacocoTestReport --no-daemon --warning-mode all
-
-      # Upload test reports
-      - name: Upload test reports (Artifact)
+      # -------------------------------------------------------------------
+      # Step 5: Upload test reports
+      # -------------------------------------------------------------------
+      - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
-      # Upload coverage reports
-      - name: Upload JaCoCo coverage (Artifact)
+      # -------------------------------------------------------------------
+      # Step 6: Upload JaCoCo coverage reports
+      # -------------------------------------------------------------------
+      - name: Upload JaCoCo coverage
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
-      # Send coverage to Codecov
-      - name: Upload coverage to CodeCov
+      # -------------------------------------------------------------------
+      # Step 7: Upload coverage to Codecov
+      # -------------------------------------------------------------------
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           file: backend/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
           name: codecov-news-platform
 
-  security:
-    runs-on: ubuntu-latest
-    needs: [build, lint, test]
-    timeout-minutes: 10
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Run GitLeaks for secrets detection
+      # -------------------------------------------------------------------
+      # Step 8: Run GitLeaks for secrets detection
+      # -------------------------------------------------------------------
       - name: Run GitLeaks scan
         run: |
           curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
           ./gitleaks detect --source . --verbose --redact
 
-      # Upload GitLeaks report only if failed
+      # -------------------------------------------------------------------
+      # Step 9: Upload GitLeaks report if scan fails
+      # -------------------------------------------------------------------
       - name: Upload GitLeaks results (if failed)
         if: failure()
         uses: actions/upload-artifact@v4
@@ -145,21 +98,15 @@ jobs:
           name: gitleaks-results
           path: .gitleaks-report.json
 
-  qodana:
-    runs-on: ubuntu-latest
-    needs: [build, lint, test]
-    timeout-minutes: 15
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Run Qodana Cloud scan for JVM projects
+      # -------------------------------------------------------------------
+      # Step 10: Run Qodana static analysis
+      # -------------------------------------------------------------------
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
           args: --project-dir,backend
-          post-pr-comment: true
-          use-annotations: true
-          upload-result: true
+          post-pr-comment: true   # Add results as PR comment
+          use-annotations: true  # Annotate issues in PR
+          upload-result: true     # Upload results to Qodana Cloud
