--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -106,7 +106,9 @@ jobs:
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
-          args: --project-dir backend        # Correct syntax, removed comma
-          post-pr-comment: true              # Add results as PR comment
-          use-annotations: true              # Annotate issues in PR
-          upload-result: true                # Upload results to Qodana Cloud
+          # Use proper syntax: project-dir without comma
+          args: -i backend
+          post-pr-comment: true        # Add results as PR comment
+          use-annotations: true        # Annotate issues in PR
+          upload-result: true          # Upload results to Qodana Cloud
+
