--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -99,17 +99,20 @@ jobs:
           path: .gitleaks-report.json
 
       # -------------------------------------------------------------------
-      # Step 10: Run Qodana static analysis (Spring Boot/JVM)
+      # Step 10: Run Qodana static analysis (Spring Boot/JVM project)
       # -------------------------------------------------------------------
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
-          # Do not pass `-i backend`, so Qodana sees qodana.yaml in repo root
-          post-pr-comment: true        # Add summary as PR comment
-          use-annotations: true        # Annotate issues directly in PR diffs
-          upload-result: true          # Upload results to Qodana Cloud
+          # Pass JVM options and timeout via args instead of "settings" in yaml
+          args: >
+            --jvm-options "-Xmx1024m"
+            --timeout 120
+          post-pr-comment: true        # Adds summary as PR comment
+          use-annotations: true        # Adds inline annotations in PR diffs
+          upload-result: true          # Uploads results to Qodana Cloud
 
       # -------------------------------------------------------------------
       # Step 11: Upload Qodana SARIF report to GitHub Security (Code scanning)
